--- a/styles/style.css
+++ b/styles/style.css
@@ -1,25 +1,48 @@
 body {
   background: #4D4755;
   font-family: 'Wizard world', sans-serif;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  margin: 0;
+  padding: 0;
 }
 
-/* Onderdeel Pie Chart */
-.arc text{
-  font: 10px sans-serif;
-  text-anchor: middle;
+header{
+  display: flex;
+  flex-grow: 1;
+  flex-basis: 100%;
+  justify-content: center;
+  height: 200px;
 }
 
-.arc path{
-  stroke: white;
+header img{
+  width: auto;
+  height: auto;
 }
 
-.title{
-  fill: #fbfbfb;
-  font-weight: bold;
+#div1{
+  margin-top: 50px;
+  flex-grow: 1;
+  flex-basis: 100%;
 }
+
+#div2{
+  width: 400px;
+  height: 500px;
+  position: absolute;
+  top: 200px;
+  right: 0;
+  justify-content: center;
+}
+
+#my_dataviz2{
+  margin-top: 50px;
+}
+
 
 /* Onderdeel header */
-header {
+/*header {
   display: flex;
 }
 
@@ -29,7 +52,7 @@ header .img-logo {
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 60px
-}
+}*/
 
 /* Swiper */
 
